--- a/DataManager/Web.config
+++ b/DataManager/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=DESKTOP-T3MS8UQ\SQLEXPRESS;AttachDbFilename=|DataDirectory|\aspnet-DataManager-20211221123950.mdf;Initial Catalog=aspnet-DataManager-20211221123950;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="RMData" connectionString="Data Source=DESKTOP-T3MS8UQ\SQLEXPRESS;Initial Catalog=RMData;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"/>
   </connectionStrings>
   <appSettings>
   </appSettings>
